--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start": "node index.js",
     "create-db": "cd dynamodb && node createJobsTable.js && node createPeopleTable.js && cd ..",
     "load-data": "cd dynamodb && node loadCarData.js && cd ..",
+    "clean": "rimraf www/ || true",
+    "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@faker-js/faker": "^7.4.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -21,12 +22,15 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@hapi/boom": "^10.0.0",
     "@sendgrid/mail": "^7.7.0",
     "aws-sdk": "^2.1199.0",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "tsc": "^2.0.4",
     "twilio": "^3.80.1"
   }
 }
